--- a/package.json
+++ b/package.json
@@ -1,19 +1,15 @@
 {
-  "name": "vite-react-router-starter",
-  "version": "0.0.1",
+  "name": "trouve-ton-artisan-backend",
+  "version": "1.0.0",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "dev": "nodemon app.js"
   },
   "dependencies": {
-    "mysql": "^2.18.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3"
+    "express": "^5.1.0",
+    "mysql2": "^3.9.4",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.0.0",
-    "vite": "^5.0.0"
+    "nodemon": "^3.1.10"
   }
 }
