--- a/mon-api-main/package.json
+++ b/mon-api-main/package.json
@@ -2,7 +2,7 @@
   "name": "trouve-ton-artisan-backend",
   "version": "1.0.0",
   "scripts": {
-    "dev": "nodemon app.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
