--- a/mon-api-main/package.json
+++ b/mon-api-main/package.json
@@ -9,7 +9,8 @@
     "express": "^5.1.0",
     "sequelize": "^6.37.1",
     "mysql2": "^3.9.4",
-    "semver": "^7.7.2"
+    "semver": "^7.7.2",
+    "dotenv": "^17.2.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
